--- a/index.html
+++ b/index.html
@@ -1,23 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>Meme Button of the Day</title>
+    <title>Meme Button</title>
+    <style>
+        body { 
+            background-color: #0f172a; 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center; 
+            justify-content: center; 
+            height: 100vh; 
+            margin: 0; 
+            font-family: 'Arial Black', sans-serif; 
+        }
+
+        h1 { 
+            color: white; 
+            text-transform: uppercase; 
+            margin-bottom: 20px; 
+            letter-spacing: 2px;
+        }
+
+        .pushable {
+            background: #4a0000;
+            border-radius: 50%;
+            border: none;
+            padding: 0;
+            cursor: pointer;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+            transition: all 0.3s;
+        }
+
+        .front {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 250px;
+            height: 250px;
+            border-radius: 50%;
+            font-size: 1.2rem;
+            font-weight: bold;
+            color: white;
+            text-transform: uppercase;
+            background: radial-gradient(circle at 30% 30%, #ff4d4d, #b30000);
+            transform: translateY(-10px);
+            border: 4px solid #800000;
+            transition: transform 0.1s;
+            text-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+        }
+
+        .pushable:active .front {
+            transform: translateY(-2px);
+        }
+
+        /* --- THE GLOW CODE --- */
+        @keyframes pulse-red {
+            0% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7); }
+            70% { box-shadow: 0 0 0 30px rgba(255, 0, 0, 0); }
+            100% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0); }
+        }
+
+        .glow-active {
+            animation: pulse-red 1.5s infinite;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <h1 id="meme-title">Meme of the Day: Bully Maguire</h1>
-        <button id="memeButton" class="pushable" role="button">
-          <span class="shadow"></span>
-          <span class="edge"></span>
-          <span class="front">
-            PRESS FOR MEME
-          </span>
-        </button>
-    </div>
 
-    <audio id="memeSound" src="https://www.myinstants.com/media/sounds/bully-maguire-theme.mp3"></audio>
+    <h1>Meme of the Day</h1>
+    
+    <button class="pushable" onclick="playMeme()">
+        <span class="front">PRESS FOR VIBES</span>
+    </button>
 
-    <script src="script.js"></script>
+    <audio id="audio" src="https://www.myinstants.com/media/sounds/bully-maguire-theme.mp3"></audio>
+
+    <script>
+        function playMeme() {
+            var audio = document.getElementById('audio');
+            var button = document.querySelector('.pushable');
+            
+            audio.currentTime = 0;
+            audio.play();
+
+            // Start the glow
+            button.classList.add('glow-active');
+
+            // Stop the glow when the music ends
+            audio.onended = function() {
+                button.classList.remove('glow-active');
+            };
+        }
+    </script>
+
 </body>
 </html>
