--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meme Button</title>
     <style>
         body { 
@@ -9,26 +10,25 @@
             flex-direction: column; 
             align-items: center; 
             justify-content: center; 
-            height: 100vh; 
+            min-height: 100vh; 
             margin: 0; 
-            font-family: 'Arial Black', sans-serif; 
+            font-family: sans-serif; 
             overflow: hidden;
         }
 
         h1 { 
             color: white; 
             text-transform: uppercase; 
-            margin-bottom: 10px; 
-            letter-spacing: 2px;
-            text-align: center;
+            font-size: 1.5rem;
+            margin-bottom: 10px;
         }
 
-        /* The GIF styling */
+        /* Fixed GIF height so it doesn't push the button away */
         #meme-gif {
-            width: 200px;
-            height: auto;
-            display: none; /* Hidden by default */
-            margin-bottom: 20px;
+            height: 150px;
+            width: auto;
+            visibility: hidden; /* Using visibility so it keeps the space open */
+            margin-bottom: 10px;
             border-radius: 10px;
         }
 
@@ -38,40 +38,13 @@
             border: none;
             padding: 0;
             cursor: pointer;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.5);
+            outline: none;
         }
 
         .front {
             display: flex;
             align-items: center;
             justify-content: center;
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            font-size: 1rem;
-            font-weight: bold;
-            color: white;
-            text-transform: uppercase;
-            background: radial-gradient(circle at 30% 30%, #ff4d4d, #b30000);
-            transform: translateY(-10px);
-            border: 4px solid #800000;
-            transition: transform 0.1s;
-        }
-
-        .pushable:active .front { transform: translateY(-2px); }
-
-        @keyframes pulse-red {
-            0% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7); }
-            70% { box-shadow: 0 0 0 30px rgba(255, 0, 0, 0); }
-            100% { box-shadow: 0 0 0 0 rgba(255, 0, 0, 0); }
-        }
-
-        .glow-active { animation: pulse-red 1.5s infinite; }
-    </style>
-</head>
-<body>
-
-    <h1>Meme of the Day</h1>
-
-
-    
+            width: 180px;
+            height:
+                
