--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #121212;
-            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
+            font-family: 'Impact', 'Arial Black', sans-serif;
+            overflow: hidden;
         }
 
         .button-container {
@@ -20,49 +21,71 @@
         }
 
         #meme-button {
-            width: 200px;
-            height: 200px;
-            background-color: #ff0000;
-            border: 10px solid #8b0000;
+            width: 220px;
+            height: 220px;
+            background: radial-gradient(circle, #ff4b4b 0%, #cc0000 100%);
+            border: 8px solid #800000;
             border-radius: 50%;
             cursor: pointer;
-            box-shadow: 0 15px #4b0000, 0 20px 25px rgba(0,0,0,0.5);
+            box-shadow: 0 15px 0 #660000, 0 20px 30px rgba(0,0,0,0.7);
             outline: none;
-            transition: all 0.1s ease;
-            position: relative;
+            transition: all 0.05s ease;
         }
 
         #meme-button:active {
-            box-shadow: 0 5px #4b0000, 0 10px 15px rgba(0,0,0,0.5);
-            transform: translateY(10px);
+            box-shadow: 0 4px 0 #660000, 0 8px 15px rgba(0,0,0,0.7);
+            transform: translateY(11px);
+        }
+
+        .text-container {
+            margin-top: 25px;
         }
 
         h1 {
             color: white;
-            margin-top: 30px;
-            text-transform: uppercase;
-            letter-spacing: 5px;
-            text-shadow: 2px 2px #ff0000;
+            font-size: 3.5rem;
+            margin: 0;
+            text-shadow: 4px 4px #000;
+            letter-spacing: 2px;
+        }
+
+        .counter {
+            color: #ffcc00;
+            font-size: 1.5rem;
+            margin-top: 10px;
+            text-shadow: 2px 2px #000;
         }
     </style>
 </head>
 <body>
 
     <div class="button-container">
-        <button id="meme-button" onclick="playRun()"></button>
-        <h1>RUN</h1>
+        <button id="meme-button" onclick="handlePress()"></button>
+        <div class="text-container">
+            <h1>RUN</h1>
+            <div class="counter">Presses: <span id="count-display">0</span></div>
+        </div>
     </div>
 
     <script>
-        // Direct link to the 'Run' vine audio
-        const audio = new Audio('https://www.myinstants.com/media/sounds/run-vine.mp3');
+        // Use a high-quality audio source
+        const audio = new Audio("https://www.soundboard.com/handler/DownLoadTrack.ashx?cliptitle=Run+Vine+Sound+Effect&filename=mt/MTI5Nzg3OTcxMjk3ODg4_v0lF8SshS_2bc.mp3");
 
-        function playRun() {
-            // Rewind to start if clicked multiple times quickly
+        // Load count from local storage or start at 0
+        let count = localStorage.getItem('memeCount') ? parseInt(localStorage.getItem('memeCount')) : 0;
+        document.getElementById('count-display').innerText = count;
+
+        function handlePress() {
+            // 1. Play Audio
             audio.currentTime = 0;
-            audio.play().catch(function(error) {
-                console.log("Audio failed to play. Make sure you interact with the page first.");
-            });
+            audio.play().catch(e => console.log("Click the page first to enable audio."));
+
+            // 2. Update Counter
+            count++;
+            document.getElementById('count-display').innerText = count;
+            
+            // 3. Save to browser memory
+            localStorage.setItem('memeCount', count);
         }
     </script>
 
